# qt_multimedia_audio_problem

./: README.md  run_test.sh
qt5_source/: CMakeLists.txt  cons5_audiodevices.cpp
qt6_source/: CMakeLists.txt  CMakeLists.txt~  cons6_audiodevices.cpp
